<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="0dp"
        android:paddingTop="@dimen/appbar_padding_top"
        app:elevation="0dp">

        <include layout="@layout/header_toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorBackground">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/tabHealth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:rotation="20"
                            app:backgroundTint="@color/purple_100"
                            app:elevation="2dp"
                            app:fabSize="normal"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_category_health" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/poppins"
                            android:padding="4dp"
                            android:text="@string/health"
                            android:textColor="@color/purple_800"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/tabScience"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:rotation="20"
                            app:backgroundTint="@color/blue_100"
                            app:elevation="2dp"
                            app:fabSize="normal"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_category_science" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/poppins"
                            android:padding="4dp"
                            android:text="@string/science"
                            android:textColor="@color/blue_800"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/tabSports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            app:backgroundTint="@color/orange_100"
                            app:elevation="2dp"
                            app:fabSize="normal"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_category_sports" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/poppins"
                            android:padding="4dp"
                            android:text="@string/sports"
                            android:textColor="@color/orange_800"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/tabBusiness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:rotation="10"
                            app:backgroundTint="@color/lime_100"
                            app:elevation="2dp"
                            app:fabSize="normal"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_category_business" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/poppins"
                            android:padding="4dp"
                            android:text="@string/business"
                            android:textColor="@color/lime_800"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/tabEntertainment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:rotation="20"
                            app:backgroundTint="@color/teal_100"
                            app:elevation="2dp"
                            app:fabSize="normal"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_entertainment" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:fontFamily="@font/poppins"
                            android:padding="4dp"
                            android:text="@string/entertain"
                            android:textColor="@color/teal_800"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/topheadelines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="@dimen/spacing_middle"
                    android:text="@string/top_headlines"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include layout="@layout/error" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>